throw errors correctly